--- a/WinFormsAppCreateRequest/WinFormsAppCreateRequest.csproj
+++ b/WinFormsAppCreateRequest/WinFormsAppCreateRequest.csproj
@@ -6,4 +6,8 @@
     <UseWindowsForms>true</UseWindowsForms>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="AsyncEnumerator" Version="4.0.2" />
+  </ItemGroup>
+
 </Project>
